[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "morpheus"
version = "2.0.2"
description = "Quantum-resistant multi-cipher encryption tool with a terminal GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
    "argon2-cffi>=25.1.0",
    "textual>=1.0.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
pq = ["pqcrypto>=0.4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
morpheus = "morpheus.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
