[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus"
version = "2.0.2"
description = "Quantum-resistant multi-cipher encryption tool with a terminal GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
    "argon2-cffi>=25.1.0",
    "textual>=1.0.0",
    "pyperclip>=1.9.0",
]

[project.optional-dependencies]
pq = ["pqcrypto>=0.4.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.21", "hypothesis>=6.0"]

[project.scripts]
morpheus = "morpheus.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (production KDF params)"]

[tool.coverage.run]
source = ["morpheus"]
omit = [
    "morpheus/gui.py",
    "morpheus/__main__.py",
]

[tool.coverage.report]
fail_under = 78
